[gd_scene load_steps=22 format=3 uid="uid://cu5lfoikocd8n"]

[ext_resource type="PackedScene" uid="uid://b6a6n3crlib1l" path="res://Scenes/XRCharacters/xr_origin.tscn" id="1_mcq2o"]
[ext_resource type="Script" uid="uid://cjdi75t7561l2" path="res://Scenes/Menu/game_main.gd" id="1_tf2yj"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="2_tf2yj"]
[ext_resource type="PackedScene" uid="uid://uqoeqlw7y6fv" path="res://Scenes/UI/game_menu.tscn" id="3_mymk4"]
[ext_resource type="PackedScene" uid="uid://dpbci75djwcd1" path="res://Scenes/UI/audio_menu.tscn" id="4_mymk4"]
[ext_resource type="PackedScene" uid="uid://k6e84xh4qu8d" path="res://Scenes/UI/credits_menu.tscn" id="4_q0tdy"]
[ext_resource type="PackedScene" uid="uid://bj4lkw3xmoyrw" path="res://Scenes/UI/how_to_menu.tscn" id="7_kltn7"]
[ext_resource type="ArrayMesh" uid="uid://bl2gw4ux5cnbi" path="res://Assets/Models/Mountains.obj" id="8_gjbt4"]
[ext_resource type="Texture2D" uid="uid://c8ybs0sbt63nb" path="res://Assets/Textures/texture_08.png" id="8_kltn7"]
[ext_resource type="AudioStream" uid="uid://bhrrnfpf5tgsv" path="res://Assets/Music/The Kids Don't Stand A Chance (Chromeo Remix).mp3" id="9_085ix"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qu83h"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_o4s6s"]
sky_material = SubResource("ProceduralSkyMaterial_qu83h")

[sub_resource type="Environment" id="Environment_mg83g"]
background_mode = 2
background_energy_multiplier = 0.38
sky = SubResource("Sky_o4s6s")
tonemap_mode = 2
glow_enabled = true
glow_intensity = 0.1
glow_blend_mode = 0
glow_hdr_threshold = 0.5
glow_hdr_scale = 1.5
volumetric_fog_enabled = true
volumetric_fog_density = 0.0833
adjustment_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_c4tih"]
dof_blur_far_distance = 8192.0

[sub_resource type="BoxShape3D" id="BoxShape3D_qu83h"]
size = Vector3(10, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kltn7"]
albedo_texture = ExtResource("8_kltn7")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="BoxMesh_o4s6s"]
material = SubResource("StandardMaterial3D_kltn7")
size = Vector3(10, 0.1, 10)

[sub_resource type="Animation" id="Animation_q0tdy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_kltn7"]
resource_name = "audio_menu_show"

[sub_resource type="Animation" id="Animation_gr7ok"]
resource_name = "lights_off_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.01]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kltn7"]
_data = {
&"RESET": SubResource("Animation_q0tdy"),
&"audio_menu_show": SubResource("Animation_kltn7"),
&"lights_off_fade": SubResource("Animation_gr7ok")
}

[node name="GameMain" type="Node3D"]
script = ExtResource("1_tf2yj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mg83g")
camera_attributes = SubResource("CameraAttributesPractical_c4tih")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.7415229, -0.67059904, -0.020993443, 0.53040767, -0.60509217, 0.5937434, -0.41086665, 0.4291392, 0.80438054, -0.062678814, 3.2067623, 1.0417454)
light_energy = 0.5
shadow_enabled = true

[node name="XROrigin3D" parent="." instance=ExtResource("1_mcq2o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.376785, 0)
script = null

[node name="Environment" type="Node" parent="."]

[node name="ViewPortCredits" parent="Environment" instance=ExtResource("2_tf2yj")]
transform = Transform3D(0.49999872, 0, -0.0011524276, -0.00070929935, 0.39407516, -0.30774054, 0.0009082865, 0.30774128, 0.39407414, -0.019393504, 3.3944669, -2.5531547)
scene = ExtResource("4_q0tdy")
viewport_size = Vector2(1152, 648)
unshaded = true
scene_properties_keys = PackedStringArray()

[node name="ViewPortAudio" parent="Environment" instance=ExtResource("2_tf2yj")]
transform = Transform3D(0.401294, 0, -0.298267, 0, 0.5, 0, 0.298267, 0, 0.401294, 2.1, 1.9, -2.4)
scene = ExtResource("4_mymk4")
viewport_size = Vector2(1152, 648)
unshaded = true
scene_properties_keys = PackedStringArray("audio_menu.gd")

[node name="ViewPortMain" parent="Environment" instance=ExtResource("2_tf2yj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8407, -2.92362)
scene = ExtResource("3_mymk4")
viewport_size = Vector2(1152, 648)
unshaded = true
scene_properties_keys = PackedStringArray("game_menu.gd")

[node name="ViewPortHowTo" parent="Environment" instance=ExtResource("2_tf2yj")]
transform = Transform3D(0.401409, 0, 0.298112, 0, 0.5, 0, -0.298112, 0, 0.401409, -2.1, 1.9, -2.4)
scene = ExtResource("7_kltn7")
viewport_size = Vector2(1152, 648)
unshaded = true
scene_properties_keys = PackedStringArray()

[node name="Mountains" type="MeshInstance3D" parent="Environment"]
mesh = ExtResource("8_gjbt4")

[node name="Floor" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_qu83h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor/CollisionShape3D"]
mesh = SubResource("BoxMesh_o4s6s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kltn7")
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_085ix")
autoplay = true
bus = &"Music"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
